# cityproject

./: CMakeLists.txt  test.py
c++/: CMakeLists.txt
c++/data/: results.txt
c++/data/newdata/numbers/: labels.txt  numbers.txt
c++/data/sem2/individualTeams/longFewFast2017/: longFewFast2017framejumpGa.txt  longFewFast2017framejumpGb.txt  longFewFast2017framejumpGc.txt  longFewFast2017nopossessionchangeGa.txt  longFewFast2017nopossessionchangeGb.txt  longFewFast2017nopossessionchangeGc.txt  longFewFast2017possessionchangeGa.txt  longFewFast2017possessionchangeGb.txt  longFewFast2017possessionchangeGc.txt  longFewFast2017usedParametersAndResults.txt
c++/data/sem2/individualTeams/longFewFast2018/: longFewFast2018framejumpGa.txt  longFewFast2018framejumpGb.txt  longFewFast2018framejumpGc.txt  longFewFast2018nopossessionchangeGa.txt  longFewFast2018nopossessionchangeGb.txt  longFewFast2018nopossessionchangeGc.txt  longFewFast2018possessionchangeGa.txt  longFewFast2018possessionchangeGb.txt  longFewFast2018possessionchangeGc.txt  longFewFast2018usedParametersAndResults.txt
c++/data/sem2/individualTeams/longFewSlow2017/: longFewSlow2017framejumpGa.txt  longFewSlow2017framejumpGb.txt  longFewSlow2017framejumpGc.txt  longFewSlow2017nopossessionchangeGa.txt  longFewSlow2017nopossessionchangeGb.txt  longFewSlow2017nopossessionchangeGc.txt  longFewSlow2017possessionchangeGa.txt  longFewSlow2017possessionchangeGb.txt  longFewSlow2017possessionchangeGc.txt  longFewSlow2017usedParametersAndResults.txt
c++/data/sem2/individualTeams/longFewSlow2018/: longFewSlow2018framejumpGa.txt  longFewSlow2018framejumpGb.txt  (+8 more)
c++/src/: .main.cpp.swp  badsave  main.cpp  mainpressure.cpp  mainpressuretime.cpp  mainsave  mainsignal.cpp  pressuretimehistory  savea
c++/src/FOOTBALL/: .Match.hpp.swp  Ball.hpp  Football.h  Match.hpp  Metadata.hpp  PitchObject.hpp  Player.hpp  Team.hpp
c++/src/STATS/: runningstats.cpp  runningstats.h
c++/src/helpers/: functions.cpp  functions.h
c++/src/include/FOOTBALL/: Ball.hpp  Football.h  Match.hpp  Metadata.hpp  PitchObject.hpp  Player.hpp  Team.hpp
c++/src/models/: .frame.cpp.swp  .frameobjects.cpp.swp  .game.cpp.swp  .game.h.swp  .idmap.cpp.swp  7  ball.h  frame.cpp  frame.h  frameobjects.cpp  frameobjects.h  game.cpp  game.h  outputs.cpp  outputs.h  player.cpp  player.h  save  wholeplayer.cpp  wholeplayer.h
c++/src/models/angmod/: computeangle.cpp
c++/src/models/briantable/: .allclosest.cpp.swp  .pressureprocessor.cpp.swp  allclosest.cpp  allclosest.h  pressureprocessor.cpp  pressureprocessor.h
c++/src/models/infogroups/: infogroupa.cpp  infogroupa.h
c++/src/models/newfile/: loader.cpp  loader.h
c++/src/models/parsers/: jsonparser.cpp  jsonparser.h
c++/src/models/possessionfilereader/: possessionfile.cpp  possessionfile.h  possessionfileline.cpp  possessionfileline.h  possessionfilemaker.cpp  possessionfilemaker.h
(+187 files in other folders)
